fix: guard semantic approval triples